--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
         padding: 0;
       }
       body {
-        background-color: black;
+        background-color: #151123;
         overflow: hidden;
         touch-action:none; 
+      }
+      #root {
+        width: 100vw;
+        height: 100vh;
       }
     </style>
   </head>
